--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -87,6 +87,13 @@
       <center><h1>US Presidential Elections Forecast</h1></center>
 
         <p></p>
+		
+		<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
+			<div class = "progress-bar" role = "progressbar" aria-valuenow = "60"
+				aria-valuemin = "0" aria-valuemax = "538" style = "height:40px;width:60%;background-color: #e9141d">
+				<span class = "sr-only">60% Complete</span>
+			</div>
+		</div>
 
         <div class="row">
           <!-- <div class="col-3">
@@ -147,7 +154,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Climate</td>
+                    <td>Climate Change</td>
                     <td><span id ='issues_climate'></span></td>
                   </tr>
                   <tr>
@@ -155,11 +162,11 @@
                     <td><span id ='issues_economy'></span></td>
                   </tr>
                   <tr>
-                    <td>Heatlh Care</td>
+                    <td>Health Care</td>
                     <td><span id ='issues_healthcare'></span></td>
                   </tr>
                   <tr>
-                    <td>Immigation</td>
+                    <td>Immigration</td>
                     <td><span id ='issues_immigration'></span></td>
                   </tr>
                 </tbody>
