--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -141,8 +141,8 @@
                 </div>
               </div>
             </div>
-            <div class="card" style="width: 18rem;">
-              <div class="card-header" style="font-weight: Bold">
+            <div class="card" style="width: 22rem;">
+              <div class="card-header" style="font-weight: Bold; align-content: center">
                 ISSUE BY CANDIDATE
               </div>
               <table class="card-table table">
@@ -158,19 +158,16 @@
                     <th class="col-xs-1"><img id ='issues_climate' class="rounded-circle" /></th>
                   </tr>
                   <tr>
-                    <td>Economy</td>
-                    <td class="col-xs-1"><img id ='issues_economy' class="rounded-circle" /></td>
+                    <th>Economy</th>
+                    <th class="col-xs-1"><img id ='issues_economy' class="rounded-circle" /></th>
                   </tr>
                   <tr>
-                    <td>Immigration</td>
-                    <td><span id ='issues_immigration'></span></td>
-
-                    <td>Heatlh Care</td>
-                    <td><img id ='issues_healthcare' class="rounded-circle" /></td>
+                    <th>Heatlh Care</td>
+                    <th><img id ='issues_healthcare' class="rounded-circle" /></th>
                   </tr>
                   <tr>
-                    <td>Immigration</td>
-                    <td><img id ='issues_immigration' class="rounded-circle" /></td>
+                    <th>Immigration</th>
+                    <th><img id ='issues_immigration' class="rounded-circle" /></th>
                   </tr>
                 </tbody>
               </table>
