--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,28 +75,40 @@
 
   <main class="container-xl">
 
-      <center><h1>US Presidential Elections Forecast</h1></center>
+    <center><h1>US Presidential Elections Forecast</h1></center>
 
-        <p></p>
+    <p></p>
 		
-		<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
-			<div class = "progress-bar" role = "progressbar" aria-valuenow = "60"
-				aria-valuemin = "0" aria-valuemax = "538" style = "height:40px;width:60%;background-color: #e9141d">
-				<span class = "sr-only">60% Complete</span>
-			</div>
-		</div>
+    <div class="col-12">
+      <div class="row">
+        <div class="col-1">
+          <img id ='r_candidate' src="{{url_for('static', filename='pics/DT.jpeg')}}" class="rounded-circle" />
+        </div>
+        <div class="col-10">
+      		<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
+      			<div class="progress-bar" role="progressbar" aria-valuenow="60"
+      				aria-valuemin="0" aria-valuemax="538" style="height:40px;width:60%;background-color: #e9141d">
+      				<span class = "sr-only">60% Complete</span>
+      			</div>
+      		</div>
+        </div>
+        <div class="col-1">
+          <img id ='d_candidate' src="{{url_for('static', filename='pics/JB.jpeg')}}" class="rounded-circle" />
+        </div>
+      </div>
+    </div>
+    
 
-        <div class="row">
-          <div class="col-6">
-            <div class="tab-content" id="v-pills-tabContent">
-              <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+      <div class="row">
+        <div class="col-6">
+          <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
 
-               {{ map_div|safe }}
-               {{ map_script|safe }}
+             {{ map_div|safe }}
+             {{ map_script|safe }}
 
-
-             </div>
-          </div>
+           </div>
+        </div>
         </div>
           <div class="col-12">
             <div class="section-heading clearfix">
