--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -196,8 +196,8 @@
           currentFipsSelection = stateFips;
         }
 
-        console.log('state fip', currentFipsSelection)
-        console.log('year', currentYearSelection)
+        //console.log('state fip', currentFipsSelection)
+        //console.log('year', currentYearSelection)
 
         var detailsUrlPath = '/details/' + currentFipsSelection + '?year=' + currentYearSelection
 
