--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,13 +54,14 @@
         font-size: 3.5rem;
       }
     }
+    
   </style>
 
 
   <!-- Custom styles for this template -->
   <link href="../static/css/starter-template.css" rel="stylesheet">
 </head>
-<body>
+<body style='margin-top:0;margin-left:0;margin-right:0;'>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
@@ -85,12 +86,16 @@
           <img id ='r_candidate' src="{{url_for('static', filename='pics/DT.jpeg')}}" class="rounded-circle" />
         </div>
         <div class="col-10">
-      		<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
-      			<div class="progress-bar" role="progressbar" aria-valuenow="60"
-      				aria-valuemin="0" aria-valuemax="538" style="height:40px;width:60%;background-color: #e9141d">
-      				<span class = "sr-only">60% Complete</span>
-      			</div>
-      		</div>
+			<div>
+				<span class="progress-label" style="font-size:25px">300</span>
+				<span class="pull-right" style="font-size:25px">238</span>
+				<div class = "progress" style="height:40px; border-radius: 0; background-color: #0015bc;">
+					<div class="progress-bar" role="progressbar" aria-valuenow="60"
+						aria-valuemin="0" aria-valuemax="538" style="height:40px;width:60%;background-color: #e9141d">
+						<span class = "sr-only">60% Complete</span>
+					</div>
+				</div>
+			</div>
         </div>
         <div class="col-1">
           <img id ='d_candidate' src="{{url_for('static', filename='pics/JB.jpeg')}}" class="rounded-circle" />
